# Research_W2016

./: README.md  careful
Colts_work/: filter_test.csv  qa_soqpsk_demod_cc.py  soqpsk_demod_cc.py
Colts_work/gr-Research/: CMakeLists.txt
Colts_work/gr-Research/grc/: CMakeLists.txt  Research_multiply_c_ff.xml  Research_multiply_c_ff.xml~  Research_new_qpsk_demod_cb.xml  Research_rotation_cc.xml  Research_soqpsk_demod.xml  Research_soqpsk_demod.xml~  Research_soqpsk_test.xml
Colts_work/gr-Research/include/Research/: CMakeLists.txt  new_qpsk_demod_cb.h  rotation_cc.h  soqpsk_demod.h  soqpsk_test.h
Colts_work/gr-Research/lib/: CMakeLists.txt  new_qpsk_demod_cb_impl.cc~  new_qpsk_demod_cb_impl.h  new_qpsk_demod_cb_impl.h~  qa_Research.cc  qa_rotation_cc.cc  qa_soqpsk_demod.h  qa_soqpsk_test.cc  qa_soqpsk_test.h  rotation_cc_impl.h  soqpsk_demod_impl.cc  soqpsk_demod_impl.h  soqpsk_demod_impl.h~  soqpsk_interpolator_cc_impl.cc~  soqpsk_test_impl.cc  soqpsk_test_impl.h
Colts_work/gr-Research/python/: CMakeLists.txt  qa_multiply_c_ff.py  qa_rotation_cc.py  qa_soqpsk_demod.py  qa_soqpsk_test.py
Colts_work/gr-Research/swig/: Research_swig.i
Colts_work/gr-dirt/: CMakeLists.txt  MANIFEST.md
Colts_work/gr-dirt/cmake/Modules/: dirtConfig.cmake
Colts_work/gr-dirt/docs/doxygen/: Doxyfile.in
Colts_work/gr-dirt/grc/: dirt_my_qpsk_demod_cb.xml~
Colts_work/gr-dirt/include/dirt/: api.h  my_qpsk_demod_cb.h
Colts_work/gr-dirt/lib/: my_qpsk_demod_cb_impl.cc  qa_dirt.cc  qa_dirt.h  qa_my_qpsk_demod_cb.cc  test_dirt.cc
Colts_work/gr-dirt/python/: __init__.py  qa_my_qpsk_demod_cb.py  qa_my_qpsk_demod_cb.py~
Colts_work/scrap/: soqpsk_test_impl.cc  soqpsk_test_impl.cc~
Colts_work/scrap/Mar3_2016/: soqpsk_demod_impl.cc  soqpsk_demod_impl.h
Yeah/gr-Research/grc/: CMakeLists.txt  Research_detection_filter_downsample_cc.xml  Research_detection_filter_downsample_cc.xml~
Yeah/gr-Research/include/Research/: api.h  (+2 more)
Yeah/gr-Research/lib/: CMakeLists.txt  detection_filter_downsample_cc_impl.cc~  detection_filter_downsample_cc_impl.h  detection_filter_downsample_cc_impl.h~  qa_Research.cc  qa_detection_filter_downsample_cc.cc  qa_detection_filter_downsample_cc.h  test_Research.cc
Yeah/gr-Research/python/: CMakeLists.txt  __init__.py  qa_detection_filter_downsample_cc.py
Yeah/gr-Research/swig/: CMakeLists.txt  Research_swig.i
Yeah/gr-soqpsk_demod/: CMakeLists.txt  MANIFEST.md
Yeah/gr-soqpsk_demod/docs/: README.soqpsk_demod
Yeah/gr-soqpsk_demod/grc/: CMakeLists.txt  soqpsk_demod_soqpsk_demod_cc.xml
Yeah/gr-soqpsk_demod/lib/: CMakeLists.txt  qa_soqpsk_demod.cc  qa_soqpsk_demod.h  qa_soqpsk_demod_cc.cc  qa_soqpsk_demod_cc.h  soqpsk_demod_cc_impl.cc  soqpsk_demod_cc_impl.cc~  soqpsk_demod_cc_impl.h  soqpsk_demod_cc_impl.h~  test_soqpsk_demod.cc
Yeah/gr-soqpsk_demod/python/: CMakeLists.txt  __init__.py  qa_soqpsk_demod_cc.py
Yeah/gr-soqpsk_demod/swig/: CMakeLists.txt  soqpsk_demod_swig.i
(+80 files in other folders)
